--- a/app/src/main/res/layout/content_department_information.xml
+++ b/app/src/main/res/layout/content_department_information.xml
@@ -8,12 +8,12 @@
         app:cardElevation="4dp"
         app:cardCornerRadius="8dp">
 
-<!--    <ScrollView-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="match_parent"-->
-<!--        android:background="@color/white"-->
-<!--        app:layout_constraintTop_toTopOf="parent"-->
-<!--        app:layout_constraintBottom_toBottomOf="parent">-->
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/white"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -73,7 +73,7 @@
                 android:layout_height="16dp" />
 
         </LinearLayout>
-<!--    </ScrollView>-->
+    </ScrollView>
 <!--    <fragment-->
 <!--        android:id="@+id/nav_host_fragment_content_department_information"-->
 <!--        android:name="androidx.navigation.fragment.NavHostFragment"-->
