--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -164,6 +164,67 @@
                     android:textColor="@color/white"
                     android:textStyle="bold"
                     android:onClick="openNewsPage"/>
+
+                <ImageView
+                    android:id="@+id/news1"
+                    android:layout_width="match_parent"
+                    android:layout_height="150dp"
+                    android:layout_weight="1"
+                    android:scaleType="centerCrop"
+                    android:layout_centerInParent="true"
+                    android:background="@color/maize"
+                    android:padding="8dp"
+                    android:layout_margin="8dp"
+                    android:onClick="openNewsPage"/>
+
+                <TextView
+                    android:id="@+id/news1Title"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/white"
+                    android:padding="8dp"
+                    android:onClick="openNewsPage"/>
+
+                <ImageView
+                    android:id="@+id/news2"
+                    android:layout_width="match_parent"
+                    android:layout_height="150dp"
+                    android:layout_weight="1"
+                    android:scaleType="centerCrop"
+                    android:layout_centerInParent="true"
+                    android:background="@color/maize"
+                    android:padding="8dp"
+                    android:layout_margin="8dp"
+                    android:onClick="openNewsPage"/>
+
+                <TextView
+                    android:id="@+id/news2Title"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/white"
+                    android:padding="8dp"
+                    android:onClick="openNewsPage"/>
+
+                <ImageView
+                    android:id="@+id/news3"
+                    android:layout_width="match_parent"
+                    android:layout_height="150dp"
+                    android:layout_weight="1"
+                    android:scaleType="centerCrop"
+                    android:layout_centerInParent="true"
+                    android:background="@color/maize"
+                    android:padding="8dp"
+                    android:layout_margin="8dp"
+                    android:onClick="openNewsPage"/>
+
+                <TextView
+                    android:id="@+id/news3Title"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/white"
+                    android:padding="8dp"
+                    android:onClick="openNewsPage"/>
+
             </LinearLayout>
 
             <View
