--- a/app/src/main/res/layout/activity_academic_calendar.xml
+++ b/app/src/main/res/layout/activity_academic_calendar.xml
@@ -27,7 +27,8 @@
         <FrameLayout
             android:id="@+id/content_frame"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+                android:layout_marginTop="?attr/actionBarSize">
             <!-- Content layout from content.xml -->
             <include layout="@layout/content_academic_calendar" />
         </FrameLayout>
